tests/ui/failing/slice-panic-2.rs.stderr
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.00s
     Running `target/debug/stable_mir_json -Zno-codegen /home/zncv/Applications/mir-semantics-compiletest/ui/array-slice-vec/slice-panic-2.rs`
warning: creating a shared reference to mutable static is discouraged
  --> /home/zncv/Applications/mir-semantics-compiletest/ui/array-slice-vec/slice-panic-2.rs:30:25
   |
30 |     unsafe { assert_eq!(DTOR_COUNT, 2); }
   |                         ^^^^^^^^^^ shared reference to mutable static
   |
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2024/static-mut-references.html>
   = note: shared references to mutable statics are dangerous; it's undefined behavior if the static is mutated or if a mutable reference is created for it while the shared reference lives
   = note: `#[warn(static_mut_refs)]` on by default


thread 'rustc' has overflowed its stack
fatal runtime error: stack overflow
Aborted (core dumped)
